DB query optimisations and cookie fix attempt