@@ -1,15 +1,15 @@
 package com.petbook.petbook_backend.service;
 
-
 import com.petbook.petbook_backend.dto.request.AddPetRequest;
 import com.petbook.petbook_backend.dto.request.FindPetByExampleRequest;
 import com.petbook.petbook_backend.dto.request.UpdatePetRequest;
 import com.petbook.petbook_backend.dto.response.PageResponse;
 import com.petbook.petbook_backend.dto.response.PetInfoPrivateResponse;
+import com.petbook.petbook_backend.dto.response.PetInfoPublicListingDTO;
 import com.petbook.petbook_backend.dto.response.PetInfoPublicResponse;
 import com.petbook.petbook_backend.exceptions.rest.PetListingNotFoundException;
 import com.petbook.petbook_backend.exceptions.rest.UnauthorizedUserException;
-import com.petbook.petbook_backend.exceptions.rest.UserNotFoundException;
+import com.petbook.petbook_backend.models.CustomUserDetails;
 import com.petbook.petbook_backend.models.Gender;
 import com.petbook.petbook_backend.models.ImageUrl;
 import com.petbook.petbook_backend.models.NotificationType;
@@ -28,7 +28,6 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -49,146 +48,93 @@ public class PetService {
     private final CloudinaryService cloudinaryService;
     private final ApplicationEventPublisher applicationEventPublisher;
 
+    //====================== READ SERVICES ======================
 
-//TODO: Change general pet listings query api to only read one imageUrl from the db
-
-
-    //ALL READ SERVICES
     @Transactional(readOnly = true)
-    public PetInfoPrivateResponse findUserPet(@NotNull long petId) {
-        String username = SecurityContextHolder.getContext().getAuthentication().getName();
-        User user = userRepository.findByEmail(username)
-                .orElseThrow(() -> new UserNotFoundException("User not found"));
+    public PetInfoPrivateResponse findUserPet(@NotNull long petId, CustomUserDetails userDetails) {
+        Long userId = userDetails.getId();
 
-        Pet pet = petRepository.findById(petId)
-                .orElseThrow(() -> new PetListingNotFoundException("Listing not found:" + petId));
+        PetInfoPrivateResponse pet = petRepository.findUserPetById(petId)
+                .orElseThrow(() -> new PetListingNotFoundException("Listing not found: " + petId));
 
-        if (!pet.getOwner().getEmail().equals(user.getEmail())) {
+        if (!pet.getOwnerId().equals(userId)) {
             throw new UnauthorizedUserException("Pet Listing is not owned by User");
         }
-        return PetInfoPrivateResponse.fromEntity(pet);
+
+        List<Map<String, String>> imageUrls = petImageUrlsRepository.findByPetId(petId).stream().map(
+                img -> {
+                    Map<String, String> map = new HashMap<>();
+                    map.put(img.getPublicId(), img.getUrl());
+                    return map;
+                }
+        ).toList();
+        pet.setImageUrls(imageUrls);
+        return pet;
     }
 
     @Transactional(readOnly = true)
     public PetInfoPublicResponse getPetById(Long id) {
-        Pet pet = petRepository.findByIdAndApproved(id, true).orElseThrow(() ->
-                new PetListingNotFoundException("No Pet listing found for given id"));
-        String ownerEmail;
-        Long ownerId;
-        if (pet.getOwner() != null) {
-            ownerEmail = pet.getOwner().getEmail();
-            ownerId = pet.getOwner().getId();
-        } else {
-            ownerEmail = null;
-            ownerId = null;
-        }
-        List<ImageUrl> imageUrls = pet.getImages();
-        return PetInfoPublicResponse.builder()
-                .id(pet.getId())
-                .name(pet.getName())
-                .type(pet.getType())
-                .breed(pet.getBreed())
-                .location(pet.getLocation())
-                .description(pet.getDescription())
-                .gender(pet.getGender().toString())
-                .imageUrls(imageUrls.stream().map(ImageUrl::getUrl).collect(Collectors.toList()))
-                .adopted(pet.isAdopted())
-                .owner(ownerEmail)
-                .ownerId(ownerId)
-                .createdAt(pet.getCreatedAt())
-                .build();
+        PetInfoPublicResponse pet = petRepository.findByIdAndApproved(id, true)
+                .orElseThrow(() -> new PetListingNotFoundException("No Pet listing found for given id"));
+        List<String> imageUrls = petImageUrlsRepository.findByPetId(id).stream().map(ImageUrl::getUrl).toList();
+        pet.setImageUrls(imageUrls);
+        return pet;
     }
 
     public List<String> autocomplete(String field, String query) {
         return switch (field.toLowerCase()) {
             case "name" -> petRepository.findTop10ByNameIgnoreCaseStartingWith(query)
-                    .stream()
-                    .map(Pet::getName)
-                    .toList();
+                    .stream().map(Pet::getName).toList();
             case "type" -> petRepository.findDistinctTop10ByTypeIgnoreCaseStartingWith(query)
-                    .stream()
-                    .map(Pet::getType)
-                    .toList();
+                    .stream().map(Pet::getType).toList();
             case "breed" -> petRepository.findDistinctTop10ByBreedIgnoreCaseStartingWith(query)
-                    .stream()
-                    .map(Pet::getBreed)
-                    .toList();
-
+                    .stream().map(Pet::getBreed).toList();
             case "location" -> petRepository.findDistinctTop10ByLocationIgnoreCaseStartingWith(query)
-                    .stream()
-                    .map(Pet::getLocation)
-                    .toList();
-
+                    .stream().map(Pet::getLocation).toList();
             default -> List.of();
         };
     }
 
     @Transactional(readOnly = true)
-    public PageResponse<PetInfoPrivateResponse> getUserPets(String sortField, String sortDirection, int page, int size) {
-        String username = SecurityContextHolder.getContext().getAuthentication().getName();
-        User user = userRepository.findByEmail(username).orElseThrow(() -> new UserNotFoundException("User not found"));
-
+    public PageResponse<PetInfoPrivateResponse> getUserPets(String sortField, String sortDirection, int page, int size, CustomUserDetails userDetails) {
+        Long userId = userDetails.getId();
 
         List<String> allowedFields = List.of("name", "type", "breed", "location", "adopted");
         if (!allowedFields.contains(sortField)) {
             throw new IllegalArgumentException("Invalid sort field: " + sortField);
         }
 
-        Sort.Direction direction;
-        try {
-            direction = Sort.Direction.fromString(sortDirection);
-        } catch (IllegalArgumentException e) {
-            throw new IllegalArgumentException("Invalid sort direction: " + sortDirection + ". Use 'asc' or 'desc'.");
-        }
-
+        Sort.Direction direction = Sort.Direction.fromString(sortDirection);
         Pageable pageable = PageRequest.of(page, size, Sort.by(direction, sortField));
-        Page<PetInfoPrivateResponse> petsPage = petRepository.findByOwnerId(user.getId(), pageable).map(PetInfoPrivateResponse::fromEntity);
-        return new PageResponse<>(petsPage);
 
+        Page<PetInfoPrivateResponse> petsPage = petRepository.findByOwnerIdProjected(userId, pageable);
+
+        return new PageResponse<>(petsPage);
     }
 
     @Transactional(readOnly = true)
-    public PageResponse<PetInfoPublicResponse> getPetsWithPaginationAndSorting(int page, int size, String sortField, String sortDirection) {
+    public PageResponse<PetInfoPublicListingDTO> getPetsWithPaginationAndSorting(int page, int size, String sortField, String sortDirection) {
         List<String> allowedFields = List.of("name", "type", "breed", "location", "adopted", "gender");
-        if (!allowedFields.contains(sortField)) {
-            throw new IllegalArgumentException("Invalid sort field: " + sortField);
-        }
+        if (!allowedFields.contains(sortField)) throw new IllegalArgumentException("Invalid sort field: " + sortField);
 
-        Sort.Direction direction;
-        try {
-            direction = Sort.Direction.fromString(sortDirection);
-        } catch (IllegalArgumentException e) {
-            throw new IllegalArgumentException("Invalid sort direction: " + sortDirection + ". Use 'asc' or 'desc'.");
-        }
-
+        Sort.Direction direction = Sort.Direction.fromString(sortDirection);
         Pageable pageable = PageRequest.of(page, size, Sort.by(direction, sortField));
 
-        Page<PetInfoPublicResponse> petsPage = petRepository.findAll(
+        Page<PetInfoPublicListingDTO> petsPage = petRepository.findAllProjected(
                 (root, query, cb) -> cb.isTrue(root.get("approved")),
                 pageable
-        ).map(PetInfoPublicResponse::fromEntity);
+        );
 
         return new PageResponse<>(petsPage);
     }
-
 
     @Transactional(readOnly = true)
     public PageResponse<PetInfoPublicResponse> searchPets(String name, String type, String breed, String location, int page, int size, String sortField, String sortDirection) {
-
         List<String> allowedFields = List.of("name", "type", "breed", "location", "adopted", "gender");
-        if (!allowedFields.contains(sortField)) {
-            throw new IllegalArgumentException("Invalid sort field: " + sortField);
-        }
+        if (!allowedFields.contains(sortField)) throw new IllegalArgumentException("Invalid sort field: " + sortField);
 
-        Sort.Direction direction;
-        try {
-            direction = Sort.Direction.fromString(sortDirection);
-        } catch (IllegalArgumentException e) {
-            throw new IllegalArgumentException("Invalid sort direction: " + sortDirection + ". Use 'asc' or 'desc'.");
-        }
-
+        Sort.Direction direction = Sort.Direction.fromString(sortDirection);
         Pageable pageable = PageRequest.of(page, size, Sort.by(direction, sortField));
-
 
         Pet probe = Pet.builder()
                 .name(name)
@@ -201,32 +147,23 @@ public class PetService {
         ExampleMatcher matcher = ExampleMatcher.matching()
                 .withIgnoreCase()
                 .withIgnoreNullValues()
-                .withStringMatcher(ExampleMatcher.StringMatcher.CONTAINING); // if you want partial matches
+                .withStringMatcher(ExampleMatcher.StringMatcher.CONTAINING);
 
         Example<Pet> example = Example.of(probe, matcher);
 
-        List<PetInfoPublicResponse> list = new ArrayList<>();
-        Page<PetInfoPublicResponse> petsPage = petRepository.findAll(example, pageable
-        ).map(PetInfoPublicResponse::fromEntity);
+        Page<PetInfoPublicResponse> petsPage = petRepository.findAll(example, pageable)
+                .map(PetInfoPublicResponse::fromEntity);
 
         return new PageResponse<>(petsPage);
     }
 
-
     @Transactional(readOnly = true)
     public PageResponse<PetInfoPublicResponse> findPetsByExample(FindPetByExampleRequest request, int page, int size, String sortField, String sortDirection) {
         List<String> allowedFields = List.of("name", "type", "breed", "location", "adopted", "gender");
-        if (!allowedFields.contains(sortField)) {
-            throw new IllegalArgumentException("Invalid sort field: " + sortField);
-        }
+        if (!allowedFields.contains(sortField)) throw new IllegalArgumentException("Invalid sort field: " + sortField);
 
-        Sort.Direction direction;
-        try {
-            direction = Sort.Direction.fromString(sortDirection);
-        } catch (IllegalArgumentException e) {
-            throw new IllegalArgumentException("Invalid sort direction: " + sortDirection + ". Use 'asc' or 'desc'.");
-        }
-
+        Sort.Direction direction = Sort.Direction.fromString(sortDirection);
+        Pageable pageable = PageRequest.of(page, size, Sort.by(direction, sortField));
 
         Pet probe = Pet.builder()
                 .name(request.getName())
@@ -235,47 +172,38 @@ public class PetService {
                 .location(request.getLocation())
                 .gender(request.getGender() != null ? Gender.valueOf(request.getGender()) : null)
                 .adopted(request.getAdopted() != null ? request.getAdopted() : false)
-                .owner(request.getOwnerEmail() != null ?
-                        User.builder().email(request.getOwnerEmail()).build() : null)
+                .owner(request.getOwnerEmail() != null ? User.builder().email(request.getOwnerEmail()).build() : null)
                 .approved(true)
                 .build();
+
         ExampleMatcher exampleMatcher = ExampleMatcher.matchingAll()
                 .withIgnoreNullValues()
                 .withIgnorePaths("id", "description", "imageUrls")
                 .withStringMatcher(ExampleMatcher.StringMatcher.CONTAINING)
                 .withIgnoreCase();
-        Pageable pageable = PageRequest.of(page, size, Sort.by(direction, sortField));
-        List<PetInfoPublicResponse> list = new ArrayList<>();
+
         Example<Pet> example = Example.of(probe, exampleMatcher);
 
-        Page<PetInfoPublicResponse> petsPage = petRepository.findAll(example, pageable).map(PetInfoPublicResponse::fromEntity);
+        Page<PetInfoPublicResponse> petsPage = petRepository.findAll(example, pageable)
+                .map(PetInfoPublicResponse::fromEntity);
 
         return new PageResponse<>(petsPage);
     }
 
-
-    //ALL WRITE SERVICES
+    //====================== WRITE SERVICES ======================
 
     @Transactional
-    public PetInfoPrivateResponse deletePetPost(@NotNull long petId) {
-        String username = SecurityContextHolder.getContext().getAuthentication().getName();
-        User user = userRepository.findByEmail(username)
-                .orElseThrow(() -> new UserNotFoundException("User not found"));
-        Long userId = user.getId();
+    public PetInfoPrivateResponse deletePetPost(@NotNull long petId, CustomUserDetails userDetails) {
+        Long userId = userDetails.getId();
+        String username = userDetails.getEmail();
+
         Pet pet = petRepository.findById(petId)
                 .orElseThrow(() -> new PetListingNotFoundException("Listing not found"));
-        List<Map<String, String>> imageUrls = pet.getImages().stream().map(img -> {
-            Map<String, String> map = new HashMap<>();
-            map.put(img.getUrl(), img.getPublicId());
-            return map;
-        }).toList();
 
-        if (!pet.getOwner().getEmail().equals(user.getEmail())) {
+        if (!pet.getOwner().getId().equals(userId))
             throw new UnauthorizedUserException("Pet Listing is not owned by User");
-        }
-        // remove old images safely
-        List<ImageUrl> imageUrl = pet.getImages();
-        imageUrl.forEach(img -> cloudinaryService.deleteFile(img.getPublicId()));
+
+        pet.getImages().forEach(img -> cloudinaryService.deleteFile(img.getPublicId()));
         petRepository.delete(pet);
 
         applicationEventPublisher.publishEvent(
@@ -286,22 +214,17 @@ public class PetService {
                         .type(NotificationType.PET_DELETED).build()
         );
 
-        return mapToPetInfoPrivateResponse(pet,user.getEmail());
-
-
+        return mapToPetInfoPrivateResponse(pet, username);
     }
 
-
-    //find all pets matching exact criteria
-
     @Transactional
-    public PetInfoPrivateResponse addPetPost(AddPetRequest request) {
-        String username = SecurityContextHolder.getContext().getAuthentication().getName();
-        User user = userRepository.findByEmail(username).orElseThrow(() -> new UserNotFoundException("User not found"));
-        Long userId = user.getId();
+    public PetInfoPrivateResponse addPetPost(AddPetRequest request, CustomUserDetails userDetails) {
+        Long userId = userDetails.getId();
+        String username = userDetails.getEmail();
+
+        User user = User.builder().id(userId).email(username).build();
         request.setOwner(user);
         Gender gender = Gender.valueOf(request.getGender());
-
 
         Pet savedPet = petRepository.save(Pet.builder()
                 .name(request.getName())
@@ -324,7 +247,6 @@ public class PetService {
                         .url(entry.getKey())
                         .publicId(entry.getValue()).build());
             }
-
         }
         petImageUrlsRepository.saveAll(imageUrls);
 
@@ -336,28 +258,22 @@ public class PetService {
                         .type(NotificationType.PET_APPROVED).build()
         );
 
-        return mapToPetInfoPrivateResponseWithImages(savedPet,username,imageUrls);
-
-
+        return mapToPetInfoPrivateResponseWithImages(savedPet, username, imageUrls);
     }
 
     @Transactional
-    public PetInfoPrivateResponse updatePetAdoptionStatus(long petId, Boolean adopted) {
-        String username = SecurityContextHolder.getContext().getAuthentication().getName();
-        User user = userRepository.findByEmail(username)
-                .orElseThrow(() -> new UserNotFoundException("User not found"));
-        Long userId = user.getId();
-
+    public PetInfoPrivateResponse updatePetAdoptionStatus(long petId, Boolean adopted, CustomUserDetails userDetails) {
+        Long userId = userDetails.getId();
+        String username = userDetails.getEmail();
 
         Pet pet = petRepository.findById(petId)
                 .orElseThrow(() -> new PetListingNotFoundException("Listing not found:" + petId));
 
-        if (!pet.getOwner().getEmail().equals(user.getEmail())) {
+        if (!pet.getOwner().getId().equals(userId))
             throw new UnauthorizedUserException("Pet Listing is not owned by User");
-        }
+
         pet.setAdopted(adopted);
         petRepository.save(pet);
-
 
         applicationEventPublisher.publishEvent(
                 NotificationEvent.builder()
@@ -367,33 +283,26 @@ public class PetService {
                         .type(NotificationType.PET_UPDATED).build()
         );
 
-        return mapToPetInfoPrivateResponse(pet,user.getEmail());
-
-
+        return mapToPetInfoPrivateResponse(pet, username);
     }
 
     @Transactional
-    public PetInfoPrivateResponse updatePetPost(UpdatePetRequest request, long petId) {
-        String username = SecurityContextHolder.getContext().getAuthentication().getName();
+    public PetInfoPrivateResponse updatePetPost(UpdatePetRequest request, long petId, CustomUserDetails userDetails) {
+        Long userId = userDetails.getId();
+        String username = userDetails.getEmail();
 
-        User user = userRepository.findByEmail(username)
-                .orElseThrow(() -> new UserNotFoundException("User not found"));
-        Long userId = user.getId();
         Pet pet = petRepository.findById(petId)
                 .orElseThrow(() -> new PetListingNotFoundException("Listing not found:" + petId));
 
-        if (!pet.getOwner().getEmail().equals(user.getEmail())) {
+        if (!pet.getOwner().getId().equals(userId))
             throw new UnauthorizedUserException("Pet Listing is not owned by User");
-        }
 
         applyUpdates(pet, request);
 
         if (request.getImageUrls() != null && !request.getImageUrls().isEmpty()) {
-            // remove old images safely
-            List<ImageUrl> oldImageUrls = pet.getImages();
-            oldImageUrls.forEach(img -> cloudinaryService.deleteFile(img.getPublicId()));
-
+            pet.getImages().forEach(img -> cloudinaryService.deleteFile(img.getPublicId()));
             pet.getImages().clear();
+
             List<ImageUrl> newImages = new ArrayList<>();
             for (Map<String, String> map : request.getImageUrls()) {
                 for (Map.Entry<String, String> entry : map.entrySet()) {
@@ -413,13 +322,14 @@ public class PetService {
                 NotificationEvent.builder()
                         .recipientUserId(userId)
                         .recipientEmail(username)
-                        .message("Your Pet Listing " + pet.getName() + " was successfully updated ! Changes are now live.")
+                        .message("Your Pet Listing " + pet.getName() + " was successfully updated! Changes are now live.")
                         .type(NotificationType.PET_UPDATED).build()
         );
 
-        return mapToPetInfoPrivateResponseWithImages(pet,username,pet.getImages());
+        return mapToPetInfoPrivateResponseWithImages(pet, username, pet.getImages());
     }
 
+    //====================== HELPERS ======================
     private void applyUpdates(Pet pet, UpdatePetRequest request) {
         if (request.getName() != null) pet.setName(request.getName());
         if (request.getType() != null) pet.setType(request.getType());
@@ -430,25 +340,26 @@ public class PetService {
         if (request.getAdopted() != null) pet.setAdopted(request.getAdopted());
     }
 
-    private PetInfoPrivateResponse mapToPetInfoPrivateResponseWithImages(Pet savedPet, String username, List<ImageUrl> imageUrls){
+    private PetInfoPrivateResponse mapToPetInfoPrivateResponseWithImages(Pet pet, String username, List<ImageUrl> imageUrls) {
         return PetInfoPrivateResponse.builder()
-                .id(savedPet.getId())
-                .name(savedPet.getName())
-                .type(savedPet.getType())
-                .breed(savedPet.getBreed())
-                .location(savedPet.getLocation())
+                .id(pet.getId())
+                .name(pet.getName())
+                .type(pet.getType())
+                .breed(pet.getBreed())
+                .location(pet.getLocation())
                 .imageUrls(imageUrls.stream().map(img -> {
                     Map<String, String> map = new HashMap<>();
                     map.put(img.getUrl(), img.getPublicId());
                     return map;
                 }).toList())
-                .adopted(savedPet.isAdopted())
+                .adopted(pet.isAdopted())
                 .owner(username)
-                .description(savedPet.getDescription())
-                .createdAt(savedPet.getCreatedAt())
+                .description(pet.getDescription())
+                .createdAt(pet.getCreatedAt())
                 .build();
     }
-    private PetInfoPrivateResponse mapToPetInfoPrivateResponse(Pet pet,String userEmail){
+
+    private PetInfoPrivateResponse mapToPetInfoPrivateResponse(Pet pet, String userEmail) {
         return PetInfoPrivateResponse.builder()
                 .id(pet.getId())
                 .name(pet.getName())
@@ -461,8 +372,4 @@ public class PetService {
                 .createdAt(pet.getCreatedAt())
                 .build();
     }
-
-
 }
-
-
